<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/birth_backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/back_button"
                android:padding="16dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <!-- Title 'About Us' -->
            <TextView
                android:id="@+id/birth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/birthdayAndAnniversary"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:clickable="true"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/birth_tabText_birth"
            android:text="@string/birthday"/>

        <TextView

            android:id="@+id/birth_tabText_anni"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/anniversary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/birth_list_birth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ListView
        android:visibility="gone"
        android:id="@+id/birth_list_anni"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>